test/analyze/type_check/map/indexing.myte
module test

import std.map.Map

fun indexing(x: Map<Int, String>) {
  // Correct element type
  (x[0]: Option<String>);
  
  // Incorrect element types
  (x[0]: Option<Int>);
  (x[0]: String);
  (x[0]: Map<Int, String>);
}

fun main() {}